# KNNClassifier2.0

./: CMakeLists.txt  readme.md
Client/: CMakeLists.txt  Client.cpp  Client.hpp  clientMain.cpp
Client/Output/: euclidean_output.csv
Server/: CMakeLists.txt
Server/Source/: main.cpp
Server/Source/srcDistances/: DistanceCalc.hpp  DistancesData.cpp  DistancesData.hpp
Server/Source/srcDistances/srcDistanceCalculators/: ChebyshevDistance.hpp  EuclideanDistance.hpp  ManhattanDistance.hpp
Server/Source/srcIO/: FileConverter.cpp  FileConverter.hpp
Server/Source/srcKnnClassifier/: Classifier.cpp  Classifier.hpp  Flower.cpp  Flower.hpp  NPoint.cpp  ServerProcess.cpp  ServerProcess.hpp
